add mark evaluation

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -15,7 +15,7 @@
     <ul class="nav navbar-nav">
       <li><a class="nav-link" th:href="@{/student}">Student List</a></li>
 
-      <li><a class="nav-link" th:href="@{addStudentpage.html}">Add student</a></li>
+      <li><a class="nav-link" th:href="@{/add-student}">Add student</a></li>
 
 
     </ul>
