--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -25,6 +25,7 @@
         <td th:text="${student.name}"></td>
         <td th:text="${student.surname}"></td>
         <td th:text="${student.exam}"></td>
+        <td th:text="${student.mark}"></td>
     </tr>
     </tbody>
   </thead>
